--- a/LLFRankUp/plugin.yml
+++ b/LLFRankUp/plugin.yml
@@ -1,8 +1,9 @@
 name: LLFRankUp
 author: L337Lobster
+website: http://llfrealms.com
 main: com.llfrealms.LLFRankUp.LLFRankUp
 depend: [CreateYourOwnMenus]
-version: 1.0
+version: 2.5
 
 commands:
     /rankup:
